# SpamApiPro

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.agent/: ARCHITECTURE.md  UPDATE_SOP.md  awesome_skills_readme.md  skills_index.json
.agent/agents/: ios-mod-specialist.md
.agent/awesome_docs/: BUNDLES.md  SOURCES.md  VISUAL_GUIDE.md
.agent/rules/: USER_PREFERENCES.md
.agent/scripts/: memory.py
.agent/skills/arm64-assembly/: SKILL.md
.agent/skills/crash-log-analysis/: SKILL.md
.agent/skills/design-to-code/: SKILL.md
.agent/skills/frida-debugging/: SKILL.md
.agent/skills/global-memory/: SKILL.md
.agent/skills/il2cpp-modding/: SKILL.md
.agent/skills/ios-anti-cheat-bypass/: SKILL.md
.agent/skills/ios-binary-patching/: SKILL.md
.agent/tasks/: upgrade-memory-brain-v2.md
.agent/workflows/: brain.md  forget.md  mod-ios.md  recall.md  remember.md  sync.md
.github/workflows/: ci.yml
src/: App.tsx  index.css  main.tsx  store.ts  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  engine.rs  lib.rs  main.rs
src-tauri/src/tests/: mod.rs
src/components/: AuthProfilesPanel.tsx  Dialogs.tsx  History.tsx  LiveMonitor.tsx  PresetsPanel.tsx  ResultsDashboard.tsx  ScenarioIcons.tsx  ScenarioStepCard.tsx  Scenarios.tsx  TestConfig.tsx
src/hooks/: useScenarioRunner.ts  useTestRunner.ts
src/utils/: authProfiles.ts  exportReport.ts  exportResults.ts  presets.ts
(+19 files in other folders)
