[package]
name = "spam-api"
version = "0.1.0"
description = "SpamAPI Pro - High Performance API Load Tester"
authors = ["SpamAPI"]
edition = "2021"

[lib]
name = "spam_api_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP engine - siêu nhanh
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate", "http2", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

# SQLite — persistent storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Metrics chính xác
hdrhistogram = "7"
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1.11.1"



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
